# guardian-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: test.yml  test_vm.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs  main.rs
core/src/virtualizer/: assembler.rs  disassembler.rs  mod.rs  traits.rs
core/testbins/hello_world/src/: main.rs
core/testbins/two_functions/src/: main.rs
core/tests/: binaries.rs  bytecode.rs
obfuscator/: Cargo.toml
obfuscator/src/: diassembler.rs  lib.rs  main.rs
obfuscator/src/pe/: parser.rs
obfuscator/src/virt/: machine.rs  mod.rs  virtualizer.rs
obfuscator/src/virtualizer/: assembler.rs  disassembler.rs  mod.rs  traits.rs
obfuscator/src/vm/: machine.rs  mod.rs  virtualizer.rs
obfuscator/testbins/: build.rs
obfuscator/testbins/hello_world/: Cargo.toml
obfuscator/testbins/license_check/: Cargo.toml
obfuscator/testbins/license_check/src/: main.rs
obfuscator/testbins/two_functions/: Cargo.toml
obfuscator/tests/: binaries.rs  bytecode.rs  tests.rs
resources/: Cargo.toml  build.rs  vm_min.rs
resources/.cargo/: config.toml
resources/src/: allocator.rs  crt.rs  lib.rs  region.rs  syscalls.rs  vm.asm  vm.rs
resources/src/assembler/: imm.rs  insn.rs  label.rs  mod.rs  reg.rs  rt.rs
resources/src/assembler/insn/: add.rs  call.rs  dec.rs  jz.rs  nop.rs  ret.rs  test.rs
src/: diassembler.rs  main.rs
src/vm/: machine.rs  virtualizer.rs
vm/: Cargo.toml  build.rs
vm-build/: Cargo.toml
vm-build/.cargo/: config.toml
vm-build/src/: lib.rs
vm-build/tests/: tests.rs
vm-proc/: Cargo.toml
vm-proc/src/: lib.rs
vm/.cargo/: config.toml
vm/libs/: minicrt.lib
vm/src/: allocator.rs  crt.rs  lib.rs  macros.rs  shared.rs  syscalls.rs  vm.asm  vm.rs
vm/src/assembler/: insn.rs  label.rs  mod.rs  prelude.rs  reg.rs
vm/src/assembler/insn/: add.rs  call.rs  dec.rs  jmp.rs  jnz.rs  jz.rs  mov.rs  nop.rs  pop.rs  push.rs  ret.rs  test.rs
vm/src/handlers/: add.rs  and.rs  cmp.rs  comb.rs  const.rs  ctx.rs  div.rs  exec.rs  jmp.rs  load.rs  mod.rs  mul.rs  not.rs  or.rs  reloc.rs  rot.rs  split.rs  store.rs  sub.rs  xor.rs
vm/tests/: tests.rs
