[workspace]
resolver = "2"
members = [
"obfuscator",
"vm"
]

[workspace.dependencies]
# virtualizer
#
x86 = "0.52.0"
symbolic-common = "12.4.1"
symbolic-demangle = "12.4.1"
anyhow = { version = "1.0.75", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
memoffset = "0.9.0"
iced-x86 = {version = "1.20.0", default-features = false, features = [
    "no_std", "intel", "decoder", "nasm", "code_asm", "op_code_info", "instr_info"
]}

[profile.dev]
panic = "abort"
debug-assertions = false

[profile.release]
panic = "abort"
# produce pdb with this, and remove debug:none in config.toml
# debug = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1