[workspace]
resolver = "2"
members = [
    "core",
    "vm-build",
    "vm"
]

[workspace.dependencies]
x86 = "0.52.0"
memoffset = "0.9.0"
symbolic-common = "12.4.1"
symbolic-demangle = "12.4.1"
anyhow = { version = "1.0.75", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
iced-x86 = { version = "1.20.0", default-features = false, features = [
    "std", "intel", "decoder", "nasm", "code_asm", "op_code_info", "instr_info"
]}

[profile.dev]


[profile.release]
panic = "abort"
# produce pdb with this, and remove debug:none in config.toml
# debug = true
strip = true
# opt lvl s and above might add relocs
opt-level = 3
lto = true
#codegen-units = 1