[workspace]
resolver = "2"
members = [
    "core",
    "vm-build",
    "vm"
]

[workspace.dependencies]
iced-x86 = { version = "1.20.0", default-features = false, features = [
    "std", "intel", "decoder", "nasm", "code_asm", "op_code_info", "instr_info"
]}
num_enum = { version = "0.7.1", default-features = false }
memoffset = "0.9.0"

[profile.release]
panic = "abort"
# produce pdb with this, and remove debug:none in config.toml
# debug = true
strip = true
# opt lvl s and above might add relocs
opt-level = 3
lto = true
#codegen-units = 1