[package]
name = "guardian"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
num_enum.workspace = true
memoffset.workspace = true
iced-x86.workspace = true
symbolic-common = "12.7.0"
symbolic-demangle = "12.7.0"
include-crypt = "0.1.1"
anyhow = "1.0.75"
exe = "0.5.6"
# cli
clap = "4.4.8"
clap_derive = "4.4.7"

[dev-dependencies]
test-binary = "3.0.1"
