[package]
name = "obfuscator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
# virtualizer
region = "3.0.0"
anyhow = "1.0.56"
num_enum = "0.6.1"
memoffset = "0.9.0"
#
exe = "0.5.6"
dynasm = "2.0.0"
x86 = "0.52.0"
symbolic-common = "12.4.1"
symbolic-demangle = "12.4.1"

[dependencies.iced-x86]
version = "1.20.0"
features = ["decoder", "nasm", "code_asm"]
