[package]
name = "vm"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc_alloc = "1.0.5"
libc = { version = "0.2.149", default-features = false }
bitflags = "2.4.0"
anyhow = { version = "1.0", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
memoffset = "0.9.0"
syscalls = {path = "../../reddeadonline/crates/syscalls"}
#
[dependencies.iced-x86]
version = "1.20.0"
default-features = false
features = ["no_std", "intel", "decoder", "nasm", "code_asm"]

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1