[package]
name = "vm"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.149", default-features = false }
bitflags = "2.4.0"
anyhow = { version = "1.0", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
memoffset = "0.9.0"
syscalls = {path = "../../reddeadonline/crates/syscalls", default-features =  false, features = ["direct"]}
#
winapi = { version = "0.3.9", default-features = false, features = ["ntdef", "basetsd", "winnt"] }
ntapi = { version = "0.4.0", default-features = false }
[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# produce pdb with this, and remove debug:none in config.toml
# debug = true
opt-level = "z"
lto = true
codegen-units = 1