[package]
name = "vm-build"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# cargo +nightly test --package vm --features testing
doctest = false
path = "src/lib.rs"

[dependencies]
guardian-vm = { path = "../vm" }

[dev-dependencies]
guardian-vm = { path = "../vm", features = ["testing"] }
guardian = { path = "../core" }
iced-x86.workspace = true

[features]
default = []
testing = ["guardian-vm/testing"]