[package]
name = "guardian-vm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
# testing
#crate-type = ["cdylib", "rlib"]
# cargo +nightly test --package vm --features testing
doctest = false
path = "src/lib.rs"

[dependencies]
paste = "1.0.14"
static_assertions = "1.1.0"
num_enum.workspace = true
num-traits.workspace = true
memoffset.workspace = true
x86.workspace = true
winapi = { version = "0.3.9", default-features = false, features = ["ntdef", "basetsd", "winnt"] }
hashbrown = "0.14.1"
# only testing
anyhow = { workspace = true, optional = true }
region = { version = "3.0.0", optional = true }

[features]
default = []
testing = ["region", "anyhow"]