[package]
name = "guardian-vm"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[lib]
# testing
#crate-type = ["cdylib", "rlib"]
# cargo +nightly test --package vm --features testing
doctest = false
path = "src/lib.rs"

[dependencies]
static_assertions = "1.1.0"
hashbrown = "0.14.1"
paste = "1.0.14"
x86 = "0.52.0"
vm-proc = { path = "../vm-proc" }
num_enum.workspace = true
memoffset.workspace = true

[features]
default = []
threaded = ["vm-proc/enabled"]
testing = []